force-app/main/default/objects/ProductType__c/ProductType__c.object-meta.xml
<CustomObject>
    <description>Used to indicate which fields are relevant for the Product object</description>
    <label>Product type</label>
    <nameField>
        <label>Product type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>