force-app/main/default/objects/ProductType__c/fields/CanHaveDesignation__c.field-meta.xml
<CustomField>
    <fullName>CanHaveDesignation__c</fullName>
    <description>Indicated whether this kind of product can be designated to other people</description>
    <label>Can have designation?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Optional</fullName>
            </value>
            <value>
                <fullName>Required</fullName>
            </value>
            <value>
                <fullName>Not applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>