force-app/main/default/objects/ProductType__c/fields/CanHaveJointOwner__c.field-meta.xml
<CustomField>
    <fullName>CanHaveJointOwner__c</fullName>
    <description>Indicates whether this kind of product can have a joint owner</description>
    <label>Can have joint owner?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Optional</fullName>
            </value>
            <value>
                <fullName>Required</fullName>
            </value>
            <value>
                <fullName>Not applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>