force-app/main/default/objects/ProductType__c/fields/CanHaveRegisteredContact__c.field-meta.xml
<CustomField>
    <fullName>CanHaveRegisteredContact__c</fullName>
    <description>Indicated whether a registered contact is relevant to this kind of product</description>
    <label>Can have registered contact?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Optional</fullName>
            </value>
            <value>
                <fullName>Required</fullName>
            </value>
            <value>
                <fullName>Not applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>