force-app/main/default/objects/ProductType__c/fields/RequiresAllotment__c.field-meta.xml
<CustomField>
    <fullName>RequiresAllotment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether products of this type require a share allotment before the fulfilment could be considered complete</description>
    <label>Requires allotment?</label>
    <type>Checkbox</type>
</CustomField>